<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Physics App</string>

    <!-- Measurements -->
    <string name="measurements">Målinger</string>
    <string name="sound">Lyd</string>
    <string name="acceleration">Acceleration</string>
    <string name="fourier">Fourier Kurve</string>
    <string name="light">Lys</string>
    <string name="magnet">Magnetfelt</string>
    <string name="osci">Oscilator</string>

    <!-- Tools -->
    <string name="tools">Værktøjer</string>
    <string name="compass">Kompas</string>
    <string name="angle">Vinkelmåler</string>
    <string name="stopwatch">Stopur</string>
    <string name="converter">Omregner</string>
    <string name="flash">Farve Generator</string>

    <!-- Log -->
    <string name="log">Arkiv</string>
    <string name="no_log_items">Der er intet i arkivet endnu</string>
    <string name="log_dialog">Vil du gemme eller slette eksperimentet?</string>
    <string name="log_type_image">Eksperiment type ikon</string>
    <string name="start_logging">Start</string>
    <string name="stop_logging">Stop</string>
    <string name="log_interval">Lognings interval:</string>
    <string name="log_start_interval">50ms</string>
    <string name="log_delay">Start efter:</string>
    <string name="log_start_delay">0s</string>
    <string name="log_delete">Slet log</string>
    <string name="log_export">Exporter log</string>
    
    <!-- Clock -->
    <string name="timer">00:00:00.000</string>
    <string name="startText">start</string>
    <string name="resetText">nulstil</string>
    <string name="pauseText">pause</string>
    <string name="resumeText">fortsæt</string>
    <string name="lapText">laptid</string>
    
    <!-- Flash -->
    <string name="pickacolor">Vælg en farve</string>
    <string name="clicktochange">Klik for at skifte farve</string>
    
    <!-- Sound -->
    <string name="sndImgDsc">Frekvens spektrum</string>
    
    <!-- Fourier -->
    <string name="fourierDsc">Frekvens spektrum</string>
    
    <!-- Lux -->
    <string name="lux">Lux</string>
    
    <string name="zero">0</string>
    
    <string name="zeroDeg">0\u00B0</string>
    
    <string name="cancel">Annuller</string>
    
    <string name="expName">Navngiv experimentet</string>

</resources>