<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="5dp" >

    <EditText
        android:id="@+id/expName"
        android:inputType="text"
        style="@style/listRow" />

    <Button
        android:id="@+id/magStart"
        style="@style/listRow"
        android:onClick="startLog"
        android:text="@string/start_logging" />

    <TextView
        style="@style/listRow"
        android:text="@string/log_interval" />

    <SeekBar
        android:id="@+id/magRateBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="2050"
        android:progress="50" />

    <TextView
        android:id="@+id/magRateBarValue"
        style="@style/listRow"
        android:gravity="center"
        android:text="@string/log_start_interval" />

    <com.drakenclimber.graph.LineGraphView
        android:id="@+id/magGraph"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        autoScale="true"
        title="X, Y, Z Mag (m/s^2)" />

</LinearLayout>